@@ -2,6 +2,17 @@
 
         Reviewed by Zack.
 
+        When scrolling with the keyboard don't call update() on the entire widget.
+        The scrollbar/scrollview implementation is already smart enough to scroll with bitblt
+        on a value change.
+
+        * Api/qwebpage.cpp:
+        (QWebPage::keyPressEvent):
+
+2007-08-30  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Zack.
+
         Fix scrolling with the keyboard if only one of the two scrollbars is visible.
 
         * Api/qwebpage.cpp:
